k8s/applications/public/slink/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slink
  namespace: slink
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: slink
      app.kubernetes.io/version: stable
      app.kubernetes.io/component: image-hoster
      app.kubernetes.io/part-of: slink
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: slink
      labels:
        app.kubernetes.io/name: slink
        app.kubernetes.io/version: stable
        app.kubernetes.io/component: image-hoster
        app.kubernetes.io/part-of: slink
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: slink
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: slink
          # Dockerfile: https://github.com/andrii-kryvoviaz/slink/blob/main/docker/Dockerfile.prod
          image: docker.io/anirdev/slink:v1.14.0
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 512Mi}
            limits: {memory: 512Mi}
          ports:
            - {name: http, protocol: TCP, containerPort: 3000}
          startupProbe: {httpGet: {port: 3000, path: /}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {httpGet: {port: 3000, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {httpGet: {port: 3000, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          volumeMounts:
            - {name: slink-app-volume, mountPath: /app, subPath: slink-app}
      volumes:
        - {name: slink-app-volume, persistentVolumeClaim: {claimName: slink-app-pvc}}
