k8s/applications/public/slink/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: slink
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: slink
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
