k8s/applications/public/slink/SecurityPolicy.yaml
# Cross namespace attachment?
# - https://github.com/envoyproxy/gateway/issues/5143
# OIDC:
# - https://gateway.envoyproxy.io/docs/tasks/security/oidc/
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: allow-all-http
  namespace: slink
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: frontend}
  authorization:
    defaultAction: Allow
